// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ExternalHost AERONET getSiteLink with no args 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
  data-gtm-external-host="AERONET"
  data-gtm-product-code="n/a"
  href="https://aeronet.gsfc.nasa.gov/cgi-bin/data_display_aod_v3?site=NEON_"
  onBlur={[Function]}
  onFocus={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  
</a>
`;

exports[`ExternalHost AERONET getSiteLink with productCode 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
  data-gtm-external-host="AERONET"
  data-gtm-product-code="DP1.00043.001"
  href="https://aeronet.gsfc.nasa.gov/cgi-bin/data_display_aod_v3?site=NEON_ABBY"
  onBlur={[Function]}
  onFocus={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  ABBY - Abby Road
</a>
`;

exports[`ExternalHost AERONET getSiteLink without productCode 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
  data-gtm-external-host="AERONET"
  data-gtm-product-code="n/a"
  href="https://aeronet.gsfc.nasa.gov/cgi-bin/data_display_aod_v3?site=NEON_ABBY"
  onBlur={[Function]}
  onFocus={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  ABBY - Abby Road
</a>
`;

exports[`ExternalHost AERONET renderLink with productCode 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
  data-gtm-external-host="AERONET"
  data-gtm-product-code="DP1.00043.001"
  href="https://aeronet.gsfc.nasa.gov"
  onBlur={[Function]}
  onFocus={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  AERONET (the AErosol RObotic NETwork)
</a>
`;

exports[`ExternalHost AERONET renderLink without productCode 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
  data-gtm-external-host="AERONET"
  data-gtm-product-code="n/a"
  href="https://aeronet.gsfc.nasa.gov"
  onBlur={[Function]}
  onFocus={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  AERONET (the AErosol RObotic NETwork)
</a>
`;

exports[`ExternalHost AERONET renderShortLink with productCode 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
  data-gtm-external-host="AERONET"
  data-gtm-product-code="DP1.00043.001"
  href="https://aeronet.gsfc.nasa.gov"
  onBlur={[Function]}
  onFocus={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  AERONET
</a>
`;

exports[`ExternalHost AERONET renderShortLink without productCode 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
  data-gtm-external-host="AERONET"
  data-gtm-product-code="n/a"
  href="https://aeronet.gsfc.nasa.gov"
  onBlur={[Function]}
  onFocus={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  AERONET
</a>
`;

exports[`ExternalHost AMERIFLUX getSiteLink with no args 1`] = `null`;

exports[`ExternalHost AMERIFLUX getSiteLink with productCode 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
  data-gtm-external-host="AMERIFLUX"
  data-gtm-product-code="DP1.00001.001"
  href="https://ameriflux.lbl.gov/sites/siteinfo/US-xAB/"
  onBlur={[Function]}
  onFocus={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  ABBY -  - Abby Road
</a>
`;

exports[`ExternalHost AMERIFLUX getSiteLink without productCode 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
  data-gtm-external-host="AMERIFLUX"
  data-gtm-product-code="n/a"
  href="https://ameriflux.lbl.gov/sites/siteinfo/US-xAB/"
  onBlur={[Function]}
  onFocus={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  ABBY -  - Abby Road
</a>
`;

exports[`ExternalHost AMERIFLUX renderLink with productCode 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
  data-gtm-external-host="AMERIFLUX"
  data-gtm-product-code="DP1.00001.001"
  href="https://ameriflux.lbl.gov"
  onBlur={[Function]}
  onFocus={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  AmeriFlux
</a>
`;

exports[`ExternalHost AMERIFLUX renderLink without productCode 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
  data-gtm-external-host="AMERIFLUX"
  data-gtm-product-code="n/a"
  href="https://ameriflux.lbl.gov"
  onBlur={[Function]}
  onFocus={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  AmeriFlux
</a>
`;

exports[`ExternalHost AMERIFLUX renderShortLink with productCode 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
  data-gtm-external-host="AMERIFLUX"
  data-gtm-product-code="DP1.00001.001"
  href="https://ameriflux.lbl.gov"
  onBlur={[Function]}
  onFocus={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  AmeriFlux
</a>
`;

exports[`ExternalHost AMERIFLUX renderShortLink without productCode 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
  data-gtm-external-host="AMERIFLUX"
  data-gtm-product-code="n/a"
  href="https://ameriflux.lbl.gov"
  onBlur={[Function]}
  onFocus={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  AmeriFlux
</a>
`;

exports[`ExternalHost BOLD getProductLinks with a valid productCode 1`] = `
<div>
  <div>
    <a
      className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
      data-gtm-external-host="BOLD"
      data-gtm-product-code="DP1.10020.001"
      href="https://portal.boldsystems.org/recordset/BETN"
      onBlur={[Function]}
      onFocus={[Function]}
      rel="noopener noreferrer"
      target="_blank"
    >
      Ground beetle sequences DNA barcode
    </a>
  </div>
  <div>
    <a
      className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
      data-gtm-external-host="BOLD"
      data-gtm-product-code="DP1.10020.001"
      href="https://portal.boldsystems.org/recordset/BETP"
      onBlur={[Function]}
      onFocus={[Function]}
      rel="noopener noreferrer"
      target="_blank"
    >
      Ground beetle sequences DNA barcode (Prototype Data)
    </a>
  </div>
</div>
`;

exports[`ExternalHost BOLD getProductLinks with no arg 1`] = `null`;

exports[`ExternalHost BOLD renderLink with productCode 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
  data-gtm-external-host="BOLD"
  data-gtm-product-code="DP1.10020.001"
  href="https://boldsystems.org/"
  onBlur={[Function]}
  onFocus={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  BOLD (Barcode of Life Datasystem)
</a>
`;

exports[`ExternalHost BOLD renderLink without productCode 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
  data-gtm-external-host="BOLD"
  data-gtm-product-code="n/a"
  href="https://boldsystems.org/"
  onBlur={[Function]}
  onFocus={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  BOLD (Barcode of Life Datasystem)
</a>
`;

exports[`ExternalHost BOLD renderShortLink with productCode 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
  data-gtm-external-host="BOLD"
  data-gtm-product-code="DP1.10020.001"
  href="https://boldsystems.org/"
  onBlur={[Function]}
  onFocus={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  BOLD
</a>
`;

exports[`ExternalHost BOLD renderShortLink without productCode 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
  data-gtm-external-host="BOLD"
  data-gtm-product-code="n/a"
  href="https://boldsystems.org/"
  onBlur={[Function]}
  onFocus={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  BOLD
</a>
`;

exports[`ExternalHost NPN renderLink with productCode 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
  data-gtm-external-host="NPN"
  data-gtm-product-code="DP1.10055.001"
  href="https://www.usanpn.org/usa-national-phenology-network"
  onBlur={[Function]}
  onFocus={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  USA National Phenology Network (USA-NPN)
</a>
`;

exports[`ExternalHost NPN renderLink without productCode 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
  data-gtm-external-host="NPN"
  data-gtm-product-code="n/a"
  href="https://www.usanpn.org/usa-national-phenology-network"
  onBlur={[Function]}
  onFocus={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  USA National Phenology Network (USA-NPN)
</a>
`;

exports[`ExternalHost NPN renderShortLink with productCode 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
  data-gtm-external-host="NPN"
  data-gtm-product-code="DP1.10055.001"
  href="https://www.usanpn.org/usa-national-phenology-network"
  onBlur={[Function]}
  onFocus={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  USA-NPN
</a>
`;

exports[`ExternalHost NPN renderShortLink without productCode 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
  data-gtm-external-host="NPN"
  data-gtm-product-code="n/a"
  href="https://www.usanpn.org/usa-national-phenology-network"
  onBlur={[Function]}
  onFocus={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  USA-NPN
</a>
`;

exports[`ExternalHost PHENOCAM getSiteLink with no args 1`] = `null`;

exports[`ExternalHost PHENOCAM getSiteLink with productCode 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
  data-gtm-external-host="PHENOCAM"
  data-gtm-product-code="DP1.00033.001"
  href="https://phenocam.nau.edu/webcam/sites/NEON.D16.ABBY.DP1.00033/"
  onBlur={[Function]}
  onFocus={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  ABBY - Abby Road
</a>
`;

exports[`ExternalHost PHENOCAM getSiteLink without productCode 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
  data-gtm-external-host="PHENOCAM"
  data-gtm-product-code=""
  href="https://phenocam.nau.edu/webcam/sites/NEON.D16.ABBY./"
  onBlur={[Function]}
  onFocus={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  ABBY - Abby Road
</a>
`;

exports[`ExternalHost PHENOCAM renderLink with productCode 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
  data-gtm-external-host="PHENOCAM"
  data-gtm-product-code="DP1.00033.001"
  href="https://phenocam.nau.edu/webcam/about/"
  onBlur={[Function]}
  onFocus={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  The PhenoCam Network
</a>
`;

exports[`ExternalHost PHENOCAM renderLink without productCode 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
  data-gtm-external-host="PHENOCAM"
  data-gtm-product-code="n/a"
  href="https://phenocam.nau.edu/webcam/about/"
  onBlur={[Function]}
  onFocus={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  The PhenoCam Network
</a>
`;

exports[`ExternalHost PHENOCAM renderShortLink with productCode 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
  data-gtm-external-host="PHENOCAM"
  data-gtm-product-code="DP1.00033.001"
  href="https://phenocam.nau.edu/webcam/about/"
  onBlur={[Function]}
  onFocus={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  PhenoCam
</a>
`;

exports[`ExternalHost PHENOCAM renderShortLink without productCode 1`] = `
<a
  className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
  data-gtm-external-host="PHENOCAM"
  data-gtm-product-code="n/a"
  href="https://phenocam.nau.edu/webcam/about/"
  onBlur={[Function]}
  onFocus={[Function]}
  rel="noopener noreferrer"
  target="_blank"
>
  PhenoCam
</a>
`;
